@@ -17,7 +17,3 @@ dependencies {
 test {
     useJUnitPlatform()
 }
-
-tasks.withType(JavaCompile).each {
-    it.options.compilerArgs.add('--enable-preview')
-}
